--- a/src/components/PlayView/PlayView.module.scss
+++ b/src/components/PlayView/PlayView.module.scss
@@ -7,7 +7,7 @@
     // mix-blend-mode: exclusion;
 
     button {
-        font-family: "VCR_OSD";
+        font-family: "NeueMontreal-Medium";
         font-weight: 500;
         font-size: 1.2rem;
         cursor: pointer;
