--- a/src/components/Title/Title.module.scss
+++ b/src/components/Title/Title.module.scss
@@ -2,22 +2,26 @@
 
 .title {
     width: 94%;
-    margin-left: 8%;
-    margin-top: 1rem;
+    margin-left: 7%;
+    margin-top: 0rem;
     // border: 2px solid red;
     display: flex;
     flex-wrap: wrap;
     &__first,
     &__second {
-        font-family: "Nacelle-Regular";
+        width: 100%;
+        font-family: "NeueMontreal-Medium";
         // color: rgb(231, 231, 231);
-        color: rgb(34, 39, 55);
+        color: rgb(25, 33, 59);
         // mix-blend-mode: difference;
-        font-size: 11rem;
-        font-weight: 300;
+        font-size: 10rem;
+        font-weight: 500;
+        line-height: 1.2;
         margin: 0;
+        margin-top: -20px;
     }
     &__second {
+        width: 23%;
         // border: 2px solid green;
         margin-top: -4%;
     }
@@ -32,7 +36,7 @@
     color: rgb(34, 39, 55);
     // mix-blend-mode: difference;
     // border: 2px solid blue;
-    margin-top: -3%;
+    margin-top: -2%;
     margin-left: 1rem;
     span {
         margin: 0;
