--- a/src/components/Title/Title.module.scss
+++ b/src/components/Title/Title.module.scss
@@ -19,6 +19,7 @@
         line-height: 1.2;
         margin: 0;
         margin-top: -20px;
+        letter-spacing: -0.1rem;
     }
     &__second {
         width: 23%;
@@ -30,16 +31,18 @@
 .smalltext {
     display: flex;
     flex-direction: column;
-    font-family: "OktaNeue-Regular";
-    font-size: 1.5rem;
+    font-family: "NeueMontreal-Regular";
+    font-weight: 500;
+    letter-spacing: 1px;
+    font-size: 1.4rem;
     // color: rgb(231, 231, 231);
     color: rgb(34, 39, 55);
     // mix-blend-mode: difference;
     // border: 2px solid blue;
     margin-top: -2%;
-    margin-left: 1rem;
+    margin-left: 0rem;
     span {
         margin: 0;
-        margin-bottom: -10px;
+        margin-bottom: -5px;
     }
 }
