Done : Audio Player

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -88,7 +88,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        position: relative;
         padding: 5px;
-        padding-right: 1px;
     }
 }
