--- a/src/components/Audio/Audio.module.scss
+++ b/src/components/Audio/Audio.module.scss
@@ -1,8 +1,11 @@
 .audioplayer {
     position: absolute;
-    margin-left: 20%;
     z-index: 3000;
-    button {
+    // border: 2px solid red;
+    &__player {
+        display: none;
+    }
+    canvas {
         cursor: pointer;
     }
 }
