Done : Add Animation Start To : Clean and add Remi Croce Creative Developer

--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -1,7 +1,7 @@
 .logo {
     cursor: pointer;
     position: fixed;
-    top: 15px;
+    top: 8.5%;
     left: 16px;
     width: 1.7%;
     z-index: 1000;
