--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -2,7 +2,7 @@
 .navbar {
     position: fixed;
     z-index: 1000;
-    top: 5px;
+    top: 7%;
     z-index: 1;
     left: 7px;
     // border: 2px solid red;
