--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -18,7 +18,7 @@
     line-height: 3;
     height: 280px;
     width: 42px;
-    background-color: rgba(251, 247, 247, 0.835);
+    background-color: rgba(235, 234, 234, 0.835); //rgba(251, 247, 247, 0.835)
     -webkit-backdrop-filter: blur(13px);
     backdrop-filter: blur(13px);
 
