--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -30,7 +30,7 @@
         margin-top: -4.5%;
         -webkit-backdrop-filter: blur(10px);
         backdrop-filter: blur(10px);
-        background-color: #fffffdf4;
+        background-color: rgb(230, 228, 228, 0.835); // rgb(230, 228, 228, 0.835)
 
         &__content {
             // border: 2px solid blue;
