--- a/src/components/Projects/Project/Project.module.scss
+++ b/src/components/Projects/Project/Project.module.scss
@@ -46,16 +46,17 @@
 
     &__pic {
         // border: 2px solid blue;
-        display: flex;
-        flex-direction: column;
-        height: 70%;
 
-        align-items: center;
-        flex-direction: center;
+        height: 74%;
+        display: flex;
+        justify-content: center;
+
         // border: 2px solid red;
 
         border-top: 1px solid black;
         border-bottom: 1px solid black;
+        overflow: hidden;
+        overflow-y: scroll;
 
         &__title {
             // border: 2px solid green;
@@ -72,21 +73,47 @@
             margin-bottom: 20px;
         }
         &__box {
-            width: 100%;
+            position: relative;
+            width: 80%;
+            padding-top: 5%;
             // border: 2px solid purple;
-            height: 50%;
+            height: 1200px;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
+            justify-content: flex-start;
+            row-gap: 0px;
+            // justify-content: center;
+            gap: 15px;
 
             &__ctn {
+                // margin-top: 5%;
                 position: relative;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                width: 80%;
-                object-fit: cover;
+                width: 100%;
+                height: 25%;
+                // object-fit: cover;
                 overflow: hidden;
                 // border: 2px solid red;
+                display: flex;
+                justify-content: space-between;
+                gap: 15px;
+            }
+            &__ctn__two {
+                // margin-top: 5%;
+                position: relative;
+                width: 100%;
+                height: 20%;
+                // object-fit: cover;
+                overflow: hidden;
+                // border: 2px solid red;
+                display: flex;
+                justify-content: space-between;
+                gap: 15px;
+                &__small {
+                    width: 50%;
+                    // border: 2px solid blue;
+                    background-color: #151818;
+                    height: 100%;
+                }
 
                 img {
                     width: 100%;
