--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -4,7 +4,7 @@
     z-index: 1000;
     top: 7%;
     z-index: 1;
-    left: 7px;
+    right: 7px;
     // border: 2px solid red;
 
     display: flex;
