--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -1,8 +1,8 @@
 .logo {
     cursor: pointer;
     position: fixed;
-    top: 8.5%;
+    top: 2.5%;
     left: 16px;
-    width: 1.7%;
+    width: 35px;
     z-index: 1000;
 }
