--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -2,7 +2,7 @@
     position: fixed;
     z-index: 4000;
     top: 1%;
-    right: 10px;
+    right: -33%; //10px;
     height: 98%;
     width: 33%;
     background-color: rgb(230, 228, 228, 0.73);
