Done : Cross Hover change rotate to scale

--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -30,7 +30,7 @@
         }
     }
     &__close:hover .menu__close__cross {
-        transform: rotate(-45deg);
+        transform: scale(0.8);
     }
 
     &__item {
