--- a/src/components/Projects/Project/Project.module.scss
+++ b/src/components/Projects/Project/Project.module.scss
@@ -264,7 +264,7 @@
     }
 
     &__close:hover .project__close__cross {
-        transform: rotate(90deg);
+        transform: scale(0.8);
         transition: 0.3s ease-in-out;
     }
 
