--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -11,6 +11,15 @@
     top: 0;
     // border: 2px solid green;
 
+    &__box__wrapper {
+        width: 89%;
+        aspect-ratio: 2.29;
+        position: relative;
+        margin-top: -3.5%;
+        -webkit-backdrop-filter: blur(10px);
+        backdrop-filter: blur(10px);
+        background-color: rgb(230, 228, 228, 0.835); // rgb(230, 228, 228, 0.835)
+    }
     h2 {
         font-family: "NeueMontreal-Medium";
         text-transform: uppercase;
@@ -24,13 +33,8 @@
     }
 
     &__box {
-        width: 90%;
-        aspect-ratio: 2.29;
-        position: relative;
-        margin-top: -4.5%;
-        -webkit-backdrop-filter: blur(10px);
-        backdrop-filter: blur(10px);
-        background-color: rgb(230, 228, 228, 0.835); // rgb(230, 228, 228, 0.835)
+        width: 100%;
+        height: 100%;
 
         &__content {
             // border: 2px solid blue;
