Done : Adjust project

--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -9,7 +9,7 @@
     width: 100%;
     position: absolute;
     top: 0;
-    // border: 2px solid green;
+    border: 2px solid green;
 
     &__box__wrapper {
         width: 89%;
